[gd_scene load_steps=15 format=3 uid="uid://baequhdq4sr0e"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_bua33"]
[ext_resource type="Texture2D" uid="uid://c6tx8xhukrxc8" path="res://assets/ui/pause_menu.png" id="1_rlmfc"]
[ext_resource type="Script" path="res://scripts/ui/map_menu.gd" id="2_086je"]
[ext_resource type="Texture2D" uid="uid://cs354ymc7vqjs" path="res://assets/ui/room_icon1.png" id="3_rom6y"]
[ext_resource type="Texture2D" uid="uid://d2krje6l2y7m4" path="res://assets/ui/room_icon3.png" id="4_tryb8"]
[ext_resource type="Texture2D" uid="uid://c2ruy044tyk8l" path="res://assets/ui/room_icon2.png" id="5_quuwj"]
[ext_resource type="Texture2D" uid="uid://barorp58p0syh" path="res://assets/ui/club_icon1.png" id="6_lf8in"]
[ext_resource type="Texture2D" uid="uid://bx36y7a0jyv6s" path="res://assets/ui/club_icon3.png" id="7_elkol"]
[ext_resource type="Texture2D" uid="uid://cgdsp2ka6oq5m" path="res://assets/ui/club_icon2.png" id="8_gmk1f"]
[ext_resource type="Texture2D" uid="uid://5j3fm8wi4s2w" path="res://assets/ui/locked_icon.png" id="9_vmx4e"]
[ext_resource type="Script" path="res://scripts/imported/settings_menu_alt.gd" id="11_4ugq6"]

[sub_resource type="Animation" id="Animation_1ahq4"]
resource_name = "pause_cycle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfdy6"]
_data = {
"pause_cycle": SubResource("Animation_1ahq4")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mu0n2"]
bg_color = Color(0.299547, 0.299547, 0.299547, 1)
corner_radius_top_left = 140
corner_radius_top_right = 140
corner_radius_bottom_right = 140
corner_radius_bottom_left = 140
corner_detail = 20

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(572, 303)
script = ExtResource("1_bua33")

[node name="MapMenu" type="Control" parent="."]
process_mode = 2
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_086je")

[node name="CenterContainer" type="CenterContainer" parent="MapMenu"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="GridContainer" type="GridContainer" parent="MapMenu/CenterContainer"]
layout_mode = 2
columns = 3

[node name="TextureButton" type="TextureButton" parent="MapMenu/CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_rom6y")
texture_pressed = ExtResource("4_tryb8")
texture_hover = ExtResource("5_quuwj")
texture_disabled = ExtResource("4_tryb8")
texture_focused = ExtResource("5_quuwj")

[node name="TextureButton2" type="TextureButton" parent="MapMenu/CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("6_lf8in")
texture_pressed = ExtResource("7_elkol")
texture_hover = ExtResource("8_gmk1f")
texture_disabled = ExtResource("7_elkol")
texture_focused = ExtResource("8_gmk1f")

[node name="TextureButton3" type="TextureButton" parent="MapMenu/CenterContainer/GridContainer"]
self_modulate = Color(0.541176, 0.541176, 0.541176, 0.6)
layout_mode = 2
disabled = true
texture_normal = ExtResource("9_vmx4e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -576.0
offset_top = -395.0
offset_right = 576.0
offset_bottom = 420.0
pivot_offset = Vector2(572, 306)
texture = ExtResource("1_rlmfc")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = -245.0
offset_top = -324.0
offset_right = 205.0
offset_bottom = 324.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TextureButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Play"

[node name="TextureButton2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Maps"

[node name="TextureButton4" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="TextureButton3" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 2
libraries = {
"": SubResource("AnimationLibrary_yfdy6")
}

[node name="SettingsMenu" type="Control" parent="."]
process_mode = 2
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
script = ExtResource("11_4ugq6")

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
visible = false
z_index = 2
z_as_relative = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0745098, 0.0745098, 0.0745098, 1)

[node name="TabContainer" type="TabContainer" parent="SettingsMenu"]
layout_mode = 0
offset_left = 42.0
offset_top = 30.0
offset_right = 1085.0
offset_bottom = 617.0
pivot_offset = Vector2(532, 292)
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mu0n2")
tab_alignment = 1
current_tab = 2
all_tabs_in_front = true

[node name="Gameplay" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/TabContainer/Gameplay"]
layout_mode = 0
offset_left = 246.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = 522.0

[node name="Audio" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/TabContainer/Audio"]
layout_mode = 0
offset_left = 246.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = 522.0
theme_override_constants/separation = 20

[node name="HBoxContainerOuter" type="HBoxContainer" parent="SettingsMenu/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = -10.0
value = -10.0

[node name="PercentLabel" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "?%"
horizontal_alignment = 2
justification_flags = 131

[node name="HBoxContainerOuter2" type="HBoxContainer" parent="SettingsMenu/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter2"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = -10.0
value = -10.0

[node name="PercentLabel" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter2"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "?%"
horizontal_alignment = 2
justification_flags = 131

[node name="HBoxContainerOuter3" type="HBoxContainer" parent="SettingsMenu/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter3"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Effect Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = -10.0
value = -10.0

[node name="PercentLabel" type="Label" parent="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter3"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "?%"
horizontal_alignment = 2
justification_flags = 131

[node name="Video" type="Control" parent="SettingsMenu/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/TabContainer/Video"]
layout_mode = 0
offset_left = 275.0
offset_top = 32.0
offset_right = 769.0
offset_bottom = 522.0
theme_override_constants/separation = 35

[node name="HBoxContainerOuter" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 160

[node name="HBoxContainerInner" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner"]
layout_mode = 2
text = "Resolution:"

[node name="OptionButton" type="OptionButton" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
selected = 0
item_count = 20
popup/item_0/text = "640 x 480"
popup/item_1/text = "720 x 480"
popup/item_1/id = 1
popup/item_2/text = "800 x 1200"
popup/item_2/id = 2
popup/item_3/text = "1280 x 720"
popup/item_3/id = 3
popup/item_4/text = "1280 x 1024"
popup/item_4/id = 4
popup/item_5/text = "1280 x 800"
popup/item_5/id = 5
popup/item_6/text = "1360 x 768"
popup/item_6/id = 6
popup/item_7/text = "1366 x 768"
popup/item_7/id = 7
popup/item_8/text = "1440 x 900"
popup/item_8/id = 8
popup/item_9/text = "1600 x 900"
popup/item_9/id = 9
popup/item_10/text = "1680 x 1050"
popup/item_10/id = 10
popup/item_11/text = "1920 x 1200"
popup/item_11/id = 11
popup/item_12/text = "1920 x 1080"
popup/item_12/id = 12
popup/item_13/text = "2560 x 1080"
popup/item_13/id = 13
popup/item_14/text = "2560 x 1600"
popup/item_14/id = 14
popup/item_15/text = "2560 x 1440"
popup/item_15/id = 15
popup/item_16/text = "2880 x 1800"
popup/item_16/id = 16
popup/item_17/text = "3440 x 1440"
popup/item_17/id = 17
popup/item_18/text = "3840 x 2160"
popup/item_18/id = 18
popup/item_19/text = "5120 x 1440"
popup/item_19/id = 19

[node name="HBoxContainerInner2" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner2"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckBox" type="CheckButton" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)

[node name="HBoxContainerOuter2" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 181

[node name="HBoxContainerInner" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner"]
layout_mode = 2
text = "VSync:"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner"]
layout_mode = 2

[node name="HBoxContainerInner2" type="HBoxContainer" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner2"]
layout_mode = 2
text = "Resizable Window:"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner2"]
layout_mode = 2

[node name="Graphics" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/TabContainer/Graphics"]
layout_mode = 0
offset_left = 246.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = 522.0

[node name="TextureButton" type="TextureButton" parent="SettingsMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 76.0
offset_bottom = 75.0
stretch_mode = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SettingsMenu"]
process_mode = 3
volume_db = 10.0
max_polyphony = 3

[connection signal="pressed" from="MapMenu/CenterContainer/GridContainer/TextureButton" to="MapMenu" method="load_room"]
[connection signal="pressed" from="MapMenu/CenterContainer/GridContainer/TextureButton2" to="MapMenu" method="load_club"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TextureButton" to="." method="close_menu"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TextureButton2" to="." method="open_map_menu"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TextureButton4" to="." method="open_settings_menu"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TextureButton3" to="." method="close_game"]
[connection signal="tab_button_pressed" from="SettingsMenu/TabContainer" to="SettingsMenu" method="PlayButtonSound"]
[connection signal="value_changed" from="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter/HSlider" to="SettingsMenu" method="_on_master_volume_slider_changed"]
[connection signal="value_changed" from="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter2/HSlider" to="SettingsMenu" method="_on_music_volume_slider_changed"]
[connection signal="value_changed" from="SettingsMenu/TabContainer/Audio/VBoxContainer/HBoxContainerOuter3/HSlider" to="SettingsMenu" method="_on_effect_volume_slider_changed"]
[connection signal="item_selected" from="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner/OptionButton" to="SettingsMenu" method="_on_resolution_selected"]
[connection signal="toggled" from="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter/HBoxContainerInner2/CheckBox" to="SettingsMenu" method="_on_fullscreen_toggled"]
[connection signal="toggled" from="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner/CheckButton" to="SettingsMenu" method="_on_vsync_toggled"]
[connection signal="toggled" from="SettingsMenu/TabContainer/Video/VBoxContainer/HBoxContainerOuter2/HBoxContainerInner2/CheckButton" to="SettingsMenu" method="_on_resizable_toggled"]
[connection signal="pressed" from="SettingsMenu/TextureButton" to="SettingsMenu" method="_toggle_visibility"]
